testsuite/tests/linear/should_fail/LinearErrOrigin.stderr

LinearErrOrigin.hs:7:7: error:
    • Couldn't match type ‘'Many’ with ‘'Many’
        arising from multiplicity of ‘x’
      ‘p’ is a rigid type variable bound by
        the type signature for:
          foo :: forall a b. (a -> b) -> a -> b
        at LinearErrOrigin.hs:6:1-31
      ‘q’ is a rigid type variable bound by
        the type signature for:
          foo :: forall a b. (a -> b) -> a -> b
        at LinearErrOrigin.hs:6:1-31
    • In an equation for ‘foo’: foo f x = f x
    • Relevant bindings include
        f :: a -> b (bound at LinearErrOrigin.hs:7:5)
        foo :: (a -> b) -> a -> b (bound at LinearErrOrigin.hs:7:1)
